# rigging

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .releaserc.prerelease.yaml  .releaserc.yaml  .secrets.baseline  .templatesyncignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  RENOVATE_TESTING.md  SECURITY.md  Taskfile.yaml  mkdocs.yaml  mkdocs.yml  pyproject.toml  python.code-workspace  setup.py  setup.sh  test.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yaml  labels.yaml  renovate.json5
.github/scripts/: generate_pr_description.py  rigging_pr_decorator.py
.github/workflows/: ci.yml  docs-update.yaml  meta-labeler.yaml  meta-sync-labels.yaml  pre-commit.yaml  publish.yml  renovate.yaml  rigging_pr_description.yaml  rigging_pr_description.yml  semantic-prs.yaml  semantic-release.yaml  semgrep.yaml  template-sync.yaml  tests.yaml
.hooks/: check_pinned_hash_dependencies.py  generate_docs.py  generate_pr_description.py
.hooks/linters/: markdownlint.json
.scripts/: generate_release_notes.py
docs/: contributing.md  docs.json  index.md  install.mdx  intro.mdx  mkdocs.yml
docs/api/: chat.md  chat.mdx  completion.md  completion.mdx  data.md  data.mdx  error.md  error.mdx  generator.md  generator.mdx  interact.md  interact.mdx  logging.md  logging.mdx  message.md  message.mdx  model.md  model.mdx  parsing.md  parsing.mdx  prompt.md  prompt.mdx  tokenize.mdx  tool.md  tool.mdx  tools.mdx  transform.mdx  util.md  util.mdx  watchers.md  watchers.mdx
docs/docs/: index.md
docs/docs/api/: errors.md  generators.md  logging.md  message.md  model.md  prompt.md  tools.md
docs/docs/tutorial/: logging.md
docs/home/: getting-started.md  introduction.md  principles.md  workflow.md
docs/stylesheets/: extra.css
docs/topics/: agents.md  async-and-batching.md  callbacks-and-mapping.md  chat.md  chats-and-messages.md  chats-and-messages.mdx  chats.md  cheatsheet.md  completions.md  completions.mdx  data-models.mdx  generators.md  generators.mdx  iterating-and-batching.md  iterating-and-batching.mdx  logging.md  logging.mdx  message-slicing.mdx  migrations.md  migrations.mdx  model.md  models.md  pipelines.mdx  project-from-template.md  prompt-functions.md  prompt-functions.mdx  serialization.md  serialization.mdx  setup_logging.md  tokenization.mdx  tools.md  tools.mdx  tracing.md  tracing.mdx  transforms.mdx  workflow.md  workflow.mdx
docs/tutorial/: tools.md
examples/: _shared.py  bandit.py  bandit_single.py  chat.py  crucible.py  dvra.py  jupyter.py  rag.py  robopages.py  tokenize.ipynb  toxic_datasets.py
examples/dreadnode/: best.py  correct.py  gen.py  multi.py  react.py  stocks.py  tool_interupt.py
rigging/: __init__.py  caching.py  callbacks.py  chat.py  completion.py  data.py  error.py  generator.py  interact.py  logging.py  message.py  model.py  parsing.py  prompt.py  tags.py  tool.py  tracing.py  transform.py  util.py  version.py  watch.py  watchers.py
rigging/experimental/metrics/: chat_accuracy.py  chat_pass_at_k.py
rigging/experimental/verifiers/: chat_contains.py  chat_contains_regex.py  chat_llm_judge.py  chat_python_code.py
rigging/generator/: __init__.py  __init__.pyi  base.py  http.py  litellm_.py  litgpt_.py  transformers_.py  vllm_.py
rigging/integrations/: __init__.py  robopages.py
rigging/tokenize/: __init__.py  base.py  llama.py  tokenizer.py  transformers_.py
rigging/tokenizer/: __init__.py  __init__.pyi  base.py  transformers_.py
rigging/tool/: __init__.py  api.py  base.py  mcp.py  native.py  robopages.py
rigging/tools/: __init__.py  base.py  mcp.py  native.py  robopages.py
rigging/transform/: __init__.py  base.py  json_tools.py  native_tools.py  pythonic_tools.py  xml_tools.py
src/: __init__.py  example.py
templates/: README.md.j2
tests/: generators.py  test_chat.py  test_chat_pipeline.py  test_completion.py  test_completion_pipeline.py  test_example.py  test_generate_readme.py  test_generation.py  test_generator_creation.py  test_generator_ids.py  test_http_spec.py  test_message_slicing.py  test_messages.py  test_model.py  test_prompt.py  test_tokenizer.py  test_tool.py  test_watchers.py  test_xml_parsing.py
